# Shop-management-system

./: .gitignore  DATABASE_SETUP.md  README.md  TAURI_MIGRATION_PLAN.md  check-db.js  env.template  init-db.js  main.js  package.json  setup-database.sh  setup-db.sql  test-all-api.js  test-api.js
database/: init.sql
minimart-tauri/: .gitignore  README.md  package-lock.json  package.json
minimart-tauri/src/: App.vue
minimart-tauri/src-tauri/: Cargo.toml  tauri.conf.json
minimart-tauri/src-tauri/migrations/: 001_initial_schema.sql  002_data_migration.sql  003_accounting.sql
minimart-tauri/src-tauri/src/: lib.rs  main.rs
minimart-tauri/src-tauri/src/commands/: accounting.rs  auth.rs  barcode.rs  categories.rs  dashboard.rs  database.rs  inventory.rs  mod.rs  products.rs  sales.rs  settings.rs
minimart-tauri/src-tauri/src/db/: mod.rs
minimart-tauri/src-tauri/src/models/: mod.rs
minimart-tauri/src/components/: Login.vue  NotificationHost.vue  POS.vue  PaginationControls.vue  SplashScreen.vue
minimart-tauri/src/components/accounting/: ChartOfAccountsTab.vue  JournalEntriesTab.vue  ProfitAndLossTab.vue
minimart-tauri/src/composables/: useJournalSummary.ts  useNotifications.ts
public/: index.html
public/css/: style.css
public/js/: app.js
server/: server.js
server/config/: database.js
server/middleware/: auth.js
server/models/: Customer.js  Inventory.js  Product.js  Sale.js
server/routes/: auth.js  customers.js  inventory.js  products.js  reports.js  sales.js
