[package]
name = "minimart-pos-tauri"
version = "0.1.0"
description = "Minimart POS System - Kenyan Retail Management"
authors = ["njoroge"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "minimart_pos_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
rusqlite = { version = "0.31", features = ["bundled", "chrono", "uuid"] }
r2d2 = "0.8"
r2d2_sqlite = "0.24"

# Authentication & Security
jsonwebtoken = "9.0"
bcrypt = "0.15"
uuid = { version = "1.0", features = ["v4", "serde"] }

# Barcode generation (placeholder - will implement custom solution)
# barcode = "0.16"

# Date/Time handling
chrono = { version = "0.4", features = ["serde"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
log = "0.4"
env_logger = "0.10"

# File system operations
fs_extra = "1.3"

# Base64 encoding
base64 = "0.21"

# HTTP client (for future integrations)
reqwest = { version = "0.12", features = ["json"] }

